[gd_scene load_steps=12 format=2]

[ext_resource path="res://GameManager.gd" type="Script" id=1]
[ext_resource path="res://NewCityBtn.gd" type="Script" id=2]
[ext_resource path="res://city.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://EmergencyLabel.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 4 )

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.335766, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 0.792246, 0.20093, 0.057793, 1, 0.0185394, 0.949219, 0.273022, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = SubResource( 2 )
region_rect = Rect2( 0, 0, 2048, 1 )

[sub_resource type="Animation" id=4]
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 4 )

[node name="Game" type="Control"]
anchor_top = 0.00104993
anchor_right = 1.0
anchor_bottom = 1.00105
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CitiesLabel" type="Label" parent="."]
anchor_left = 0.000517309
anchor_right = 0.097197
anchor_bottom = 0.0916667
text = "Cities"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CityContainer" type="ScrollContainer" parent="CitiesLabel"]
anchor_top = 0.581818
anchor_right = 0.979798
anchor_bottom = 10.3455
size_flags_horizontal = 0
size_flags_vertical = 0
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VSplitContainer" type="VSplitContainer" parent="CitiesLabel/CityContainer"]
margin_right = 100.0
margin_bottom = 230.0
custom_constants/separation = 30
collapsed = true

[node name="City0" parent="CitiesLabel/CityContainer/VSplitContainer" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 0.0
margin_right = 100.0
margin_bottom = 100.0

[node name="City1" parent="CitiesLabel/CityContainer/VSplitContainer" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 130.0
margin_right = 100.0
margin_bottom = 230.0

[node name="City2" parent="CitiesLabel/CityContainer/VSplitContainer" instance=ExtResource( 3 )]
margin_left = 0.00011728
margin_top = 250.0
margin_right = 90.2345
margin_bottom = 311.667

[node name="City3" parent="CitiesLabel/CityContainer/VSplitContainer" instance=ExtResource( 3 )]
margin_left = 0.00011728
margin_top = 375.0
margin_right = 90.2345
margin_bottom = 436.667

[node name="CitiesVerticalDivider" type="Panel" parent="."]
margin_left = 99.0
margin_right = 139.0
margin_bottom = 596.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourcesLabel" type="Label" parent="."]
margin_left = 470.703
margin_top = 0.322998
margin_right = 583.703
margin_bottom = 36.3229
custom_fonts/font = SubResource( 6 )
text = "Materials: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodLabel" type="Label" parent="."]
margin_left = 874.67
margin_top = -1.37555
margin_right = 974.67
margin_bottom = 34.6244
custom_fonts/font = SubResource( 6 )
text = "Food: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MilitaryLabel" type="Label" parent="."]
margin_left = 748.983
margin_top = -0.752411
margin_right = 848.983
margin_bottom = 35.2475
custom_fonts/font = SubResource( 6 )
text = "Military: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopulationLabel" type="Label" parent="."]
margin_left = 610.095
margin_top = -0.122467
margin_right = 732.095
margin_bottom = 35.8775
custom_fonts/font = SubResource( 6 )
text = "Population: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewCityBtn" type="Button" parent="."]
margin_left = 3.44202
margin_top = 573.71
margin_right = 91.442
margin_bottom = 593.71
text = "+ New City"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TickTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="ProgressBar" type="ProgressBar" parent="."]
anchor_left = 0.777541
anchor_top = 0.971093
anchor_right = 0.997268
anchor_bottom = 0.994427
custom_styles/fg = SubResource( 3 )
value = 40.09
percent_visible = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ProgressBar"]
autoplay = "ProgressBar"
anims/ProgressBar = SubResource( 4 )

[node name="EmergencyLabel" type="Label" parent="."]
margin_left = 144.0
margin_top = 369.056
margin_right = 609.0
margin_bottom = 591.056
custom_fonts/font = SubResource( 5 )
text = "EMERGENCY:
NONE"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColourSwitch" type="Timer" parent="EmergencyLabel"]
wait_time = 0.5

[connection signal="pressed" from="NewCityBtn" to="." method="_on_NewCityBtn_pressed"]
[connection signal="timeout" from="TickTimer" to="." method="_on_TickTimer_timeout"]
[connection signal="timeout" from="EmergencyLabel/ColourSwitch" to="EmergencyLabel" method="_on_ColourSwitch_timeout"]
